--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
