--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "socket.io-client": "^4.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
